# Image-Editor

./: .gitignore  package-lock.json  package.json  tailwind.config.js
src/: App.js  index.css  index.js
src/CanvasWrapper/: CanvasWrapper.js  ImageWrapper.js  MainWrapper.js
src/Components/: Canvas.js
src/Components/Cropper/: Cropper.js
src/Components/Cropper/CropperStyles/: Cropper.css  Cropper.css.map  Cropper.scss
src/Components/Editor/: Footer.js  Header.js
src/Components/Editor/SidePanel/: CanvasPanel.js  CropperPanel.js  SidePanel.js
src/Constants/Cropper/: CropperStyles.js  Handlers.js  index.js
src/Constants/General/: Assets.js  index.js
src/Pages/: Editor.js  UploadImage.js
src/Pages/Styles/: UploadImage.css
src/Redux/: Store.js
src/Redux/Actions/: CanvasActions.js  CropperActions.js  TransformationsActions.js
src/Redux/Constants/: CanvasActionTypes.js  CropperActionTypes.js  TransformationsActionTypes.js
src/Redux/Reducers/: CanvasReducers.js  CropperReducers.js  TransformationsReducer.js  TransformationsReducers.js  index.js
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
wasm-lib/src/imageObj/: mod.rs  transform.rs
